--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/airtable": "^0.8.1",
+    "airtable": "^0.10.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.9.2",
+    "typescript": "^4.0.3"
   }
 }
